modules/webgl/tests/cpp-macro-03.vs.exp
"cpp-macro-03.vs":4: P0001: CPP syntax error:
