modules/webgl/tests/cpp-macro-03.vs
precision highp float;
#define VALUE 3
#if VALUE /* unterminated comment
